# gaia

./: .bochsrc  .buildinfo  .clang-format  .clang-tidy  .gdb_history  .gitignore  .gitmodules  CMakeLists.txt  COPYING  Doxyfile  KConfig  Makefile  README.md  README.org  TODO  acpi_8h_source.html  annotated.html  annotated_dup.js  apic_8h_source.html  arch_2x86__64_2machdep_2vm_8h_source.html  asm_8h_source.html  base_8h_source.html  cdev_8h_source.html  charon_8h.html  charon_8h.js  charon_8h_source.html  clang-format  classes.html  compile_commands.json  compile_flags.txt  cpu_8h_source.html  cpuid_8h_source.html  debug_8h_source.html  devfs_8h_source.html  dir_1610f40f20f0c63fd903d9077eb98aca.html  dir_502c27997e5f6691e65aa851531e4efe.html  dir_502c27997e5f6691e65aa851531e4efe.js  dir_60739b2e56d7ac2b25b4f840ed126fde.html  dir_60739b2e56d7ac2b25b4f840ed126fde.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+411 more)
.github/workflows/: docs.yaml  docs.yml
_sources/: index.md.txt
_sources/contributing/: building.md.txt
_sources/developer/: developer.md.txt
_sources/reference/: classGaia_1_1DebugSink.rst.txt  classGaia_1_1Dev_1_1AcpiDevice.rst.txt  classGaia_1_1Dev_1_1AcpiPc.rst.txt  classGaia_1_1Dev_1_1Catalog.rst.txt  classGaia_1_1Dev_1_1FbConsole.rst.txt  classGaia_1_1Dev_1_1PciBus.rst.txt  classGaia_1_1Dev_1_1PciDevice.rst.txt  classGaia_1_1Dev_1_1Ps2Controller.rst.txt  classGaia_1_1Dev_1_1Registry.rst.txt  classGaia_1_1Dev_1_1Service.rst.txt  classGaia_1_1Dev_1_1VirtioBlock.rst.txt  classGaia_1_1Dev_1_1VirtioDevice.rst.txt  classGaia_1_1DotGraph.rst.txt  classGaia_1_1Elf.rst.txt  classGaia_1_1Err.rst.txt  classGaia_1_1Freelist.rst.txt  classGaia_1_1Fs_1_1DevOps.rst.txt  classGaia_1_1Fs_1_1Devfs.rst.txt  classGaia_1_1Fs_1_1DeviceOps.rst.txt  classGaia_1_1Fs_1_1VnodeStream.rst.txt  classGaia_1_1Hal_1_1Vm_1_1Pagemap.rst.txt  classGaia_1_1List.rst.txt  classGaia_1_1Ok.rst.txt  classGaia_1_1Path.rst.txt  classGaia_1_1Posix_1_1Fd.rst.txt  classGaia_1_1Posix_1_1Fds.rst.txt  classGaia_1_1Posix_1_1TTY.rst.txt  classGaia_1_1Posix_1_1TTY_1_1Ops.rst.txt  classGaia_1_1Result.rst.txt  classGaia_1_1Ringbuffer.rst.txt  classGaia_1_1Spinlock.rst.txt  classGaia_1_1Vm_1_1AnonMap.rst.txt  classGaia_1_1Vm_1_1Space.rst.txt  code_reference.rst.txt  (+886 more)
cmake/: x86_64-llvm.cmake
contributing/: building.html  contributing.html  guidelines.html
developer/: developer.html  porting.html
docs/: conf.py  requirements.txt
docs/contributing/: contributing.md  (+1 more)
make/: config.mk  x86_64-llvm.mk
meson/: x86_64-llvm.ini
reference/: classGaia_1_1DebugSink.html  classGaia_1_1Dev_1_1AcpiDevice.html  classGaia_1_1Dev_1_1AcpiPc.html  classGaia_1_1Dev_1_1Catalog.html  classGaia_1_1Dev_1_1FbConsole.html  classGaia_1_1Dev_1_1PciBus.html  classGaia_1_1Dev_1_1PciDevice.html  classGaia_1_1Dev_1_1Ps2Controller.html  classGaia_1_1Dev_1_1Registry.html  classGaia_1_1Dev_1_1Service.html  classGaia_1_1Dev_1_1VirtioBlock.html  classGaia_1_1Dev_1_1VirtioDevice.html  classGaia_1_1DotGraph.html  classGaia_1_1Elf.html  classGaia_1_1Err.html  classGaia_1_1Freelist.html  classGaia_1_1Fs_1_1DevOps.html  classGaia_1_1Fs_1_1Devfs.html  classGaia_1_1Fs_1_1DeviceOps.html  classGaia_1_1Fs_1_1VnodeStream.html  classGaia_1_1Hal_1_1Vm_1_1Pagemap.html  classGaia_1_1List.html  classGaia_1_1Ok.html  classGaia_1_1Path.html  classGaia_1_1Posix_1_1Fd.html  classGaia_1_1Posix_1_1Fds.html  classGaia_1_1Posix_1_1TTY.html  classGaia_1_1Posix_1_1TTY_1_1Ops.html  classGaia_1_1Result.html  classGaia_1_1Ringbuffer.html  classGaia_1_1Spinlock.html  classGaia_1_1Vm_1_1AnonMap.html  classGaia_1_1Vm_1_1Space.html  code_reference.html  define_amd64_2mmu_8hpp_1a146e1f29f427128da0f53f6d45625404.html  define_amd64_2mmu_8hpp_1a333bdddcf2da08d311953d68861d23a1.html  define_amd64_2mmu_8hpp_1a35cf32d035efb2f4b272b6e2959302b9.html  define_amd64_2mmu_8hpp_1a3e69b85515d8ca16e91358e899254b59.html  define_amd64_2mmu_8hpp_1a7827d87ef4c834ac6b2ccecbb168bdd3.html  define_amd64_2mmu_8hpp_1a85a159e372991b9ebcda1380c877c310.html  (+880 more)
scripts/: alacritty2fb.py  dev.sh  license.py  make-image.sh  menuconfig
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  (+34 more)
src/: meson.build
src/arch/: meson.build
src/arch/aarch64/: entry.cpp  hal.cpp
src/arch/hal/: hal.hpp  int.hpp  mmu.hpp
src/arch/riscv64/: entry.cpp  meson.build  mmu.cpp
src/arch/x86_64/: apic.c  apic.cpp  apic.h  apic.hpp  asm.h  asm.hpp  cpu_machdep.c  cpuid.c  cpuid.h  cpuid.hpp  entry.c  entry.cpp  gdt.c  gdt.cpp  gdt.hpp  hal.cpp  hpet.c  hpet.cpp  hpet.hpp  idt.cpp  idt.hpp  int.cpp  intr_machdep.c  limine.h  link.ld  locore.asm  machdep.c  madt.h  meson.build  mmu.cpp  mmu.hpp  simd.c  simd.cpp  simd.hpp  syscall.asm  syscall.cpp  syscall.hpp  timer.cpp  timer.hpp  vm_machdep.c
src/arch/x86_64/machdep/: cpu.h  intr.h  machdep.h  vm.h
src/gaia/arch/x86_64/: asm.h  context.c  context.h  cpuid.c  cpuid.h  elf.c  entry.c  gdt.asm  gdt.c  gdt.h  gdt.s  host.c  idt.asm  idt.c  idt.h  idt.s  interrupts.c  limine.c  link.ld  meson.build  paging.c  paging.h  sched.c  sched.h  simd.c  simd.h
src/platform/amd64/: apic.cpp  apic.hpp  asm.hpp  cpu.cpp  cpu.hpp  cpuid.hpp  entry.cpp  gdt.cpp  gdt.hpp  hal.cpp  hpet.cpp  hpet.hpp  idt.cpp  idt.hpp  int.cpp  limine.h  link.ld  locore.asm  meson.build  mmu.cpp  mmu.hpp  platform.hpp  simd.cpp  simd.hpp  syscall.asm  syscall.cpp  syscall.hpp  timer.cpp  timer.hpp
subprojects/: .clang-tidy  chdrs.wrap  cxxhdrs.wrap  flanterm.wrap  lai.wrap
sysroot/: limine.cfg  test
tests/: elf.cpp  freelist.cpp  list.cpp  main.cpp  meson.build  path.cpp  ringbuffer.cpp  test.elf
toolchains/: aarch64-llvm.ini  riscv64-llvm.ini  x86_64-llvm.ini
(+242 files in other folders)
